--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ h1 {
   text-transform: uppercase;
   font-size: 14px;
   font-family: "Coiny", Arial, sans-serif;
+  padding-top: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 ul {
