--- a/style.css
+++ b/style.css
@@ -7,10 +7,14 @@ body {
   background-color: #292524;
   color: #fafaf9;
   font-family: "Sono", sans-serif;
-  padding: 48px;
+  padding: 48px 64px;
 }
 
 /* MAIN LAYOUT */
+.container {
+  max-width: 1500px;
+  margin: 0 auto;
+}
 .header {
   margin-bottom: 40px;
 
@@ -31,6 +35,11 @@ body {
   display: flex;
   align-items: center;
   gap: 16px;
+}
+
+.logo img {
+  width: 68px;
+  height: 68px;
 }
 
 h1 {
