--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ body {
   max-width: 1500px;
   margin: 0 auto;
 }
+
 .header {
   margin-bottom: 40px;
-
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -52,13 +52,6 @@ h1 {
   margin-top: 6px;
 }
 
-.fact-form {
-  background-color: #44403c;
-  margin-bottom: 40px;
-  padding: 16px 40px;
-  text-align: center;
-}
-
 .fact {
   font-size: 20px;
   line-height: 1.4;
@@ -70,6 +63,7 @@ h1 {
   display: flex;
   align-items: center;
   gap: 24px;
+  border-radius: 16px;
 }
 
 .tag {
@@ -152,4 +146,39 @@ ul {
 .btn-category {
   width: 100%;
   background-image: none;
+}
+/* FACT FORM */
+.fact-form {
+  background-color: #44403c;
+  margin-bottom: 40px;
+  padding: 16px 32px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  border-radius: 16px;
+}
+.fact-form input,
+.fact-form select {
+  width: 220px;
+  background-color: #78716c;
+  border: none;
+  border-radius: 100px;
+  padding: 16px;
+  color: inherit;
+  font-family: inherit;
+  font-size: 18px;
+}
+
+.fact-form input::placeholder {
+  color: #a8a29e;
+}
+
+.fact-form input:first-child {
+  flex-grow: 1;
+}
+
+.fact-form span {
+  font-weight: 600;
+  font-size: 18px;
+  margin-right: 18px;
 }
