--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@ body {
   grid-template-columns: 250px 3fr;
   gap: 48px;
 }
+
+@media (max-width: 900px) {
+  .main {
+    grid-template-columns: 1fr;
+  }
+}
+
 .category {
   margin-bottom: 16px;
 }
@@ -64,6 +71,14 @@ h1 {
   align-items: center;
   gap: 24px;
   border-radius: 16px;
+}
+
+@media (max-width: 1200px) {
+  .fact {
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 12px;
+  }
 }
 
 .tag {
@@ -157,6 +172,7 @@ ul {
   gap: 16px;
   border-radius: 16px;
 }
+
 .fact-form input,
 .fact-form select {
   width: 220px;
@@ -181,4 +197,19 @@ ul {
   font-weight: 600;
   font-size: 18px;
   margin-right: 18px;
+}
+
+@media (max-width: 1000px) {
+  body {
+    padding: 32px 48px;
+  }
+
+  .fact-form {
+    flex-direction: column;
+    align-items: stretch;
+  }
+  .fact-form input,
+  .fact-form select {
+    width: auto;
+  }
 }
