--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ body {
   justify-content: space-between;
 }
 
+@media (max-width: 900px) {
+  .header {
+    flex-direction: column;
+  }
+}
+
 .main {
   display: grid;
   grid-template-columns: 250px 3fr;
