--- a/src/style.css
+++ b/src/style.css
@@ -173,6 +173,14 @@ ul {
   background-image: none;
 }
 /* FACT FORM */
+
+.message {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 32px;
+  font-weight: 600;
+  margin-top: 24px;
+}
 .fact-form {
   background-color: #44403c;
   margin-bottom: 40px;
