--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,7 @@ body {
   display: grid;
   grid-template-columns: 250px 3fr;
   gap: 48px;
+  height: calc(100vh - 68px - 40px - 48px - 48px);
 }
 
 @media (max-width: 900px) {
@@ -51,6 +52,11 @@ body {
 
 .category {
   margin-bottom: 16px;
+}
+
+section {
+  overflow: scroll;
+  padding-bottom: 40px;
 }
 /* ELEMENTS */
 
